syntax = "proto3";

package sensor;

service SensorService {
  rpc StreamSensorData (SensorRequest) returns (stream SensorData);
}

message SensorRequest {
  string device_id = 1;
}

message SensorData {
  string device_id = 1;
  float temperature = 2;
  float humidity = 3;
  int64 timestamp = 4;
}
